[package]
name = "call"
description = "Covered call options contract."
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw721-base = { workspace = true }
cw721 = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw-ownable = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }

vault = { path = "../vault" }
vault-factory = { path = "../vault-factory" }
common = { path = "../../packages/common" }
macros = { path = "../../packages/macros" }
