[package]
name = "vault"
description = "Vault contracts."
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []

[dependencies]
serde = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw-ownable = { workspace = true }
cw721 = { workspace = true }
thiserror = { workspace = true }

protocol = { path = "../protocol", features = ["library"] }
common = { path = "../../packages/common" }
macros = { path = "../../packages/macros" }


[dev-dependencies]
env_logger = "~0.10"
log = "~0.4"
lazy_static = "1.4"
once_cell = "1.8"
